# zk-Disphasia

./: Cargo.toml  README.md
ZKDisphasiaBulleproofPaillier/: Cargo.toml
ZKDisphasiaBulletproof/: Cargo.toml
ZKDisphasiaBulletproof/src/: main.rs
ZKDisphasiaBulletproofElGamal/: Cargo.toml
ZKDisphasiaBulletproofElGamal/src/: main.rs
ZKDisphasiaZKSNARK/: Cargo.toml
ZKDisphasiaZKSNARK/trusted_setup/: kzg_bn254_8.params
ZKDisphasiaZKSTARK/: Cargo.toml
ZKDisphasiaZKSTARK/src/: main.rs
iot_azure_test_bullet/: Cargo.toml
iot_azure_test_shared/: Cargo.toml
iot_azure_test_shared/src/: main.rs
iot_azure_test_snark/: Cargo.toml
iot_azure_test_stark/: Cargo.toml
src/: main.rs
zkdisphasia_azure_iot_deployments/: Cargo.toml
zkdisphasia_azure_iot_deployments/log/: log_vis.py  test.jsonl
zkdisphasia_azure_iot_deployments/log/plots/: scaling_factors.csv  shared_functions.csv  zkp_functions.csv
zkdisphasia_azure_iot_deployments/src/: lib.rs
zkdisphasia_azure_iot_deployments/src/bulletproof/: mod.rs
zkdisphasia_azure_iot_deployments/src/common/: mod.rs
zkdisphasia_azure_iot_deployments/src/snark/: mod.rs
zkdisphasia_azure_iot_deployments/src/stark/: mod.rs
zkdisphasia_azure_iot_deployments/trusted_setup/: kzg_bn254_5.params
