[package]
name = "ZK-DISPHASIA_ElGamal_ZKSNARK"
version = "0.1.0"
authors = ["Jude Ramanan"]
edition = "2024"
description = "Zero Knowledge Distributed IoT Secure Protocol for Homomorphic Aggregation Schemes, Infrastructure, and Algorithms (Version using ZK-SNARK and ElGamal)"
repository = "https://github.com/ramananj34/ZK-Disphasia"

[dependencies]
curve25519-dalek-ng = { version = "4.1", features = ["u64_backend", "serde"], default-features = false } #My curve
ed25519-dalek = { version = "2.0", features = ["rand_core"] } #Digital signatures
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" } #Halo2
blake2b_simd = "1.0" #Transcript
merlin = "3.0" #Transcripts
frost-ristretto255 = "1.0" #FROST
subtle = "2.4" #Constant time operations
zeroize = "1.5" #Data deletion
rand = "0.8" #Random support
rand_core = "0.6" #Random support
serde = { version = "1.0", features = ["derive"] } #Serialization/deserialization
serde_with = "3.14" #Serialization/deserialization

[[bin]]
name = "setup_ceremony"
path = "src/bin/setup.rs"

[[bin]]
name = "iot_device"
path = "src/bin/main.rs"