[package]
name = "ZK-DISPHASIA_ZKSTARK"
version = "0.1.0"
authors = ["Jude Ramanan"]
edition = "2024"
description = "Zero Knowledge Distributed IoT Secure Protocol for Homomorphic Aggregation Schemes, Infrastructure, and Algorithms (Version using ZK-STARK)"
repository = "https://github.com/ramananj34/ZK-Disphasia"

[dependencies]
# Curve and elliptic curve operations
curve25519-dalek-ng = { version = "4.1", features = ["u64_backend", "serde"], default-features = false }

# Digital signatures
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

# Winterfell STARK prover/verifier - NO TRUSTED SETUP!
winterfell = { version = "0.10", features = ["concurrent"] }
winter-utils = "0.10"  # For Serializable/Deserializable traits
winter-prover = "0.10"

# Cryptographic primitives
blake2b_simd = "1.0"  # For commitment hashing
merlin = "3.0"        # For Fiat-Shamir in Schnorr proofs

# FROST threshold signatures
frost-ristretto255 = "1.0"

# Security utilities
subtle = "2.4"   # Constant-time operations
zeroize = "1.5"  # Secure memory clearing

# Random number generation
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.14"