[package]
name = "ZK-DISPHASIA_ZKSTARK"
version = "0.0.0"
authors = ["Jude Ramanan"]
edition = "2024"
description = "Zero Knowledge Decentralized IoT Secure Protocol for Homomorphic Aggregation Schemes, Implementations, and Applications (Version using ZK-STARK)"
repository = "https://github.com/ramananj34/ZK-Disphasia"

[dependencies]
curve25519-dalek-ng = { version = "4.1", features = ["u64_backend", "serde"], default-features = false } #My curve
ed25519-dalek = { version = "2.0", features = ["rand_core"] } #Digital signatures
winterfell = { version = "0.10", features = ["concurrent"] } #Winterfell
winter-utils = "0.10" #Winterfell
winter-prover = "0.10" #Winterfell
blake2b_simd = "1.0" #Blake Transcript
merlin = "3.0" #Merlin Transcript
frost-ristretto255 = "1.0" #FROST
subtle = "2.4" #Constant time operations
zeroize = "1.5" #Safe deletion
rand = "0.8" #Random
rand_core = "0.6" #Random
serde = { version = "1.0", features = ["derive"] } #Serialization/deserialization
serde_with = "3.14" #Serialization/deserialization